--- a/prasunet_WD_03/index.html
+++ b/prasunet_WD_03/index.html
@@ -11,7 +11,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f0f0f0;
+    background-color: #282626;
     font-family: Arial, sans-serif;
 }
 
@@ -29,8 +29,8 @@
 .cell {
     width: 100px;
     height: 100px;
-    background-color: #fff;
-    border: 2px solid #000;
+    background-color: #f4eded;
+    border: 2px solid #f7f0f0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -39,7 +39,8 @@
 }
 
 .cell:hover {
-    background-color: #e0e0e0;
+    background-color: #383737;
+    color: aliceblue;
 }
 
 .message {
@@ -51,7 +52,11 @@ button {
     margin-top: 20px;
     padding: 10px 20px;
     font-size: 1em;
+    font-weight: bold;
     cursor: pointer;
+}
+h1{
+    color: aliceblue;
 }
 
      </style>
@@ -77,6 +82,7 @@ button {
         const board = document.getElementById('board');
 const cells = document.querySelectorAll('.cell');
 const message = document.getElementById('message');
+message.style.color = "white";
 const resetButton = document.getElementById('reset');
 let currentPlayer = 'X';
 let gameState = Array(9).fill(null);
